proper order fix (#1052)
* proper order fix

* trigger

* trigger

* trigger